{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 72,
  "lineage": "2406394f-28aa-7583-70ce-d1088b382dcc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "springreact_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:169752714002:instance/i-082d96d291e25f316",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082d96d291e25f316",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "springreact-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fba8d3bc236d03c7",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-54-83-169-51.compute-1.amazonaws.com",
            "public_ip": "54.83.169.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cef991bbf1f8569",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021910221318e89f4",
            "tags": {
              "Name": "springreact_ec2"
            },
            "tags_all": {
              "Name": "springreact_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e56b721886cac6ed"
            ]
          },
          "dependencies": [
            "aws_key_pair.springreact-key",
            "aws_security_group.springreact_sg",
            "aws_subnet.springreact_subnet",
            "aws_vpc.springreact-docker-at-169752714002",
            "data.aws_ami.springreact_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "springreact_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169752714002:internet-gateway/igw-0728b27121c280bca",
            "id": "igw-0728b27121c280bca",
            "owner_id": "169752714002",
            "tags": {
              "Name": "springreact_igw"
            },
            "tags_all": {
              "Name": "springreact_igw"
            },
            "vpc_id": "vpc-0147a4f6b7252116c"
          },
          "dependencies": [
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "springreact_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0728b27121c280bca",
            "id": "r-rtb-07d12bcb70815fb111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d12bcb70815fb11",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.springreact_igw",
            "aws_route_table.springreact_rtb",
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "springreact_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169752714002:route-table/rtb-07d12bcb70815fb11",
            "id": "rtb-07d12bcb70815fb11",
            "owner_id": "169752714002",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "springreact_rtb"
            },
            "tags_all": {
              "Name": "springreact_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0147a4f6b7252116c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "springreact_rtb_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d02345a6ec9f0c",
            "route_table_id": "rtb-07d12bcb70815fb11",
            "subnet_id": "subnet-021910221318e89f4"
          },
          "dependencies": [
            "aws_route_table.springreact_rtb",
            "aws_subnet.springreact_subnet",
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "springreact_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169752714002:security-group/sg-0e56b721886cac6ed",
            "description": "springreact security group",
            "egress": [],
            "id": "sg-0e56b721886cac6ed",
            "ingress": [],
            "name": "springreact_sg",
            "name_prefix": "",
            "owner_id": "169752714002",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0147a4f6b7252116c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_pub_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-225432842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e56b721886cac6ed",
            "security_group_rule_id": "sgr-0efdd197ef7d8876c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.springreact_sg",
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2462715183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e56b721886cac6ed",
            "security_group_rule_id": "sgr-0301b7ad44006a314",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.springreact_sg",
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_ssh_input",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-608194714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e56b721886cac6ed",
            "security_group_rule_id": "sgr-0b42ea04015969fb6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.springreact_sg",
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "springreact_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169752714002:subnet/subnet-021910221318e89f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021910221318e89f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "169752714002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "springreact_subnet_pub"
            },
            "tags_all": {
              "Name": "springreact_subnet_pub"
            },
            "vpc_id": "vpc-0147a4f6b7252116c"
          },
          "dependencies": [
            "aws_vpc.springreact-docker-at-169752714002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "springreact-docker-at-169752714002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:169752714002:vpc/vpc-0147a4f6b7252116c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028ac39317849a161",
            "default_route_table_id": "rtb-05701503869219585",
            "default_security_group_id": "sg-0c8ff336193255c1f",
            "dhcp_options_id": "dopt-0f727f49caf7d633a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0147a4f6b7252116c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05701503869219585",
            "owner_id": "169752714002",
            "tags": {
              "Name": "springreact-docker_vpc_1"
            },
            "tags_all": {
              "Name": "springreact-docker_vpc_1"
            }
          }
        }
      ]
    }
  ]
}